--- a/table+list.html
+++ b/table+list.html
@@ -68,6 +68,8 @@
                     <b>Key Features/Benefits</b>
                 </th>
             </tr>
+        </thead>
+        <tbody>
             <tr>
                 <td>make web page interactive and improve the user experience</td>
                 <td>
@@ -78,7 +80,7 @@
                     </ul>
                 </td>
             </tr>
-        </thead>
+        </tbody>
         </table>
 </body>
 </html>
