--- a/Accessibility.html
+++ b/Accessibility.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><ins>Accessibility</ins></h1>
+    <h1>
+        <ins>Accessibility</ins>
+    </h1>
     <p> Accessibility in HTML provides a sense of equality. In simple words, it provides an equal access to all including the person having disabilities.<br>
  it is the practice of making web pages usuable by as many people as possible. </p>
  <h1><ins>Why accessbility is so much essential ?</ins></h1>
