--- a/Improve.html
+++ b/Improve.html
@@ -8,10 +8,10 @@
 <body>
     <h1><ins>Ways to improve the accessbility of HTML</ins></h1>
     <ul>
-        <li><b>Use clean and valid HTML:</b> This makes it easier for assistive technologies to interpret and navigate your content.</li>
-        <li><b>Use semantic HTML tag:</b> These helps screen readers determine the location and formatting of different elements on a page</li>
-        <li><b>Use keyboard shortcuts:</b> This allows user to perfom common task faster and easier, without relying on mouse or any ponting device</li>
-        <li><b>Use headings</b> Headings provide a clear structure and hierarchy to the content, making it easier for the people with disabilities to navigate the page.</li>
+        <li><b>Use clean and valid HTML:</b> This makes it easier for assistive technologies to interpret and navigate your content.</li><br>
+        <li><b>Use semantic HTML tag:</b> These helps screen readers determine the location and formatting of different elements on a page</li><br>
+        <li><b>Use keyboard shortcuts:</b> This allows user to perfom common task faster and easier, without relying on mouse or any ponting device</li><br>
+        <li><b>Use headings</b> Headings provide a clear structure and hierarchy to the content, making it easier for the people with disabilities to navigate the page.</li><br>
     </ul>
 </body>
 </html>
